--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3>Hello, It's Me</h3>
           <h1>Pratham Sachdev</h1>
           <h3>And I am a <span class="multi-text"></span></h3>
-          <p>hi, My name is Pratham sachdev and i am a Frontend Developer. I develope website UI with using HTML, CSS and JS and also ReactJS library For developing</p>
+          <p>hi, My name is Pratham sachdev and i am a Frontend Developer. I develop website UI with using HTML, CSS and JS and also ReactJS library For developing</p>
           <div class="social-media">
             <a href="https://www.instagram.com/__.prathamm05/?igsh=ODA1NTc5OTg5Nw%3D%3D"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="https://www.facebook.com/people/Pratham-Sachdev/pfbid0v8RtQL5sesbjpTrGstkNTYUnLYdRs4dYyqPMxVjX2VsHMas17pDyLX5uMWixme28l/?mibextid=ZbWKwL"><i class='bx bxl-facebook' ></i></a>
