--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="https://www.instagram.com/__.prathamm05/?igsh=ODA1NTc5OTg5Nw%3D%3D"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="https://www.facebook.com/people/Pratham-Sachdev/pfbid0v8RtQL5sesbjpTrGstkNTYUnLYdRs4dYyqPMxVjX2VsHMas17pDyLX5uMWixme28l/?mibextid=ZbWKwL"><i class='bx bxl-facebook' ></i></a>
             <a href="https://github.com/Prathamsachdev"><i class='bx bxl-github' ></i></a>
-            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://www.linkedin.com/in/pratham-sachdev-a759a22b2/"><i class='bx bxl-linkedin' ></i></a>
           </div>
           <a href="#" class="btn">Download CV</a>
         </div>
